@@ -1,3 +1,5 @@
+* fix bug [ 1746101 ] defending units in pacific show incorrectly in battle displa (comradekev)
+
 * change Load new game to Choose Game on startup screen. (sgb)
 
 * fix bug [ 1855420 ] Unable to move fighters during non-combat movement (tclayton)
